@@ -553,6 +553,12 @@ function BodyReader(options) {
 
 
 function readNumberingProperties(styleId, element, numbering) {
+    var level = element.firstOrEmpty("w:ilvl").attributes["w:val"];
+    var numId = element.firstOrEmpty("w:numId").attributes["w:val"];
+    if (level !== undefined && numId !== undefined) {
+        return numbering.findLevel(numId, level);
+    }
+
     if (styleId != null) {
         var levelByStyleId = numbering.findLevelByParagraphStyleId(styleId);
         if (levelByStyleId != null) {
@@ -560,13 +566,7 @@ function readNumberingProperties(styleId, element, numbering) {
         }
     }
 
-    var level = element.firstOrEmpty("w:ilvl").attributes["w:val"];
-    var numId = element.firstOrEmpty("w:numId").attributes["w:val"];
-    if (level === undefined || numId === undefined) {
-        return null;
-    } else {
-        return numbering.findLevel(numId, level);
-    }
+    return null;
 }
 
 var supportedImageTypes = {
